2026/day-62/terraform-aws-infra/main.tf
# VPC
# Creates an isolated network in AWS
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "TerraWeek-VPC"
  }
}

# Public Subnet
# Public subnet inside the VPC
resource "aws_subnet" "public_subnet" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "TerraWeek-Public-Subnet"
  }
}

# Internet Gateway
# Connects VPC to the internet
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "TerraWeek-igw"
  }
}

# Route Table
# Routes traffic from subnet to IGW
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
 }

  tags = {
    Name = "TerraWeek-Public-RT"
  }
}

# Route Table Association
# Links subnet to the route table
resource "aws_route_table_association" "public_rt_assoc" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

# Security Group
# Firewall: allow SSH & HTTP, all outbound
resource "aws_security_group" "ec2-sg" {
  name        = "TerraWeek-SG"
  description = "Allow SSH and HTTP"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound"
 from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "TerraWeek-SG"
  }
}

# Adding key generated by ssh-keygen

resource "aws_key_pair" "my_key_pair" {
  key_name   = "terra-josh-key"
  public_key = file("terra-josh-key.pub")
}

# EC2 Instance
# Launch a server in public subnet
resource "aws_instance" "ec2" {
  ami                         = "ami-0d76b909de1a0595d"   # "ami-043ab4148b7bb33e9"
  instance_type               = "t3.micro"
  key_name                    = aws_key_pair.my_key_pair.key_name
  subnet_id                   = aws_subnet.public_subnet.id
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.ec2-sg.id]

  tags = {
    "Name" = "TerraWeek-Server"
  }

  lifecycle {
    create_before_destroy = true
  }
}

# S3 bucket

resource "aws_s3_bucket" "app_logs" {

bucket = "terra-week-app-logs-2026"
depends_on = [aws_instance.ec2]
tags = {
Name = "TerraWeek-S3-Bucket"
}
}
